# tiny-scanner

./: .gitignore  CMakeLists.txt  README.md  app.py  gui.py  requirements.txt
.github/workflows/: cmake-single-platform.yml
include/: mainwindow.hpp  parser.h  parserexception.hpp  scanner.h  util.h
src/: main.c  main.cpp  mainwindow.cpp  mainwindow.ui  parser.c  parser.cpp  scanner.c  scanner.cpp  util.c
tests/: bad.tiny  test.tiny  test2.tiny
